Add some additional color variables

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -577,6 +577,7 @@ $list-margin-left:              1.25rem !default;
 $list-margin-bottom:            1rem !default;
 
 $list-item-bg:                  transparent !default;
+$list-item-color:               null !default;
 $list-item-disabled-bg:         $list-item-bg !default;
 $list-item-disabled-color:      $component-disabled-color !default;
 $list-item-active-bg:           $component-active-bg !default;
@@ -904,6 +905,7 @@ $dropdown-padding-y:            .3125rem !default;
 $dropdown-spacer:               .125rem !default;
 $dropdown-font-size:            $font-size-base !default;
 $dropdown-bg:                   $component-bg !default;
+$dropdown-color:                $body-color !default;
 $dropdown-border-color:         $component-border-color !default;
 $dropdown-border-width:         $border-width !default;
 $dropdown-border-radius:        $border-radius !default;
@@ -1010,6 +1012,7 @@ $jumbotron-padding-x:       1.5rem !default;
 $jumbotron-padding-xs-y:    1.5rem !default;
 $jumbotron-padding-xs-x:    .75rem !default;
 $jumbotron-bg:              $uibase-50 !default;
+$jumnotron-color:           null !default;
 $jumbotron-border-radius:   .3125rem !default;
 $jumbotron-breakpoint:      sm !default;
 
@@ -1064,6 +1067,7 @@ $card-padding-y:            .75rem !default;
 $card-padding-x:            1rem !default;
 $card-margin-bottom:        1rem !default;
 $card-bg:                   $component-bg !default;
+$card-color:                null !default;
 $card-border-color:         $component-overlay-border-color !default;
 $card-border-width:         $border-width !default;
 $card-border-radius:        $border-radius !default;
@@ -1159,6 +1163,7 @@ $modal-dialog-margin:           .625rem !default;
 $modal-dialog-sm-up-margin-y:   1.875rem !default;
 
 $modal-content-bg:               $component-bg !default;
+$modal-content-color:            null !default;
 $modal-content-border-color:     $component-overlay-border-color !default;
 $modal-content-border-width:     $border-width !default;
 $modal-content-box-shadow:       0 .25rem .5rem rgba($black, .5) !default;
