--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -6,6 +6,7 @@
         min-width: 0;
         margin-bottom: $card-margin-bottom;
         word-wrap: break-word;
+        color: $card-color;
         background-color: $card-bg;
         border: $card-border-width solid $card-border-color;
         @include border-radius($card-border-radius);
