fix typo and lint errors

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1012,7 +1012,7 @@ $jumbotron-padding-x:       1.5rem !default;
 $jumbotron-padding-xs-y:    1.5rem !default;
 $jumbotron-padding-xs-x:    .75rem !default;
 $jumbotron-bg:              $uibase-50 !default;
-$jumnotron-color:           null !default;
+$jumbotron-color:           null !default;
 $jumbotron-border-radius:   .3125rem !default;
 $jumbotron-breakpoint:      sm !default;
 
