--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -5,6 +5,7 @@
         flex-direction: column;
         min-width: 0;
         margin-bottom: $card-margin-bottom;
+        color: $card-color;
         word-wrap: break-word;
         background-color: $card-bg;
         border: $card-border-width solid $card-border-color;
