--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -81,6 +81,7 @@
         display: flex;
         flex-direction: column;
         width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
+        color: $modal-content-color;
         // Override the `pointer-events: none;` in the .modal-dialog
         pointer-events: auto;
         background-color: $modal-content-bg;
