--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -283,7 +283,7 @@
 
             // Hides the default caret in IE11
             &::-ms-expand {
-                opacity: 0;
+                display: none;
             }
         }
     }
