Add optional button and input font family settings

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -630,6 +630,7 @@ $table-hover-alt-box-shadow:    inset 0 0 0 999rem rgba($white, .2) !default;
 // =====
 $btn-padding-y:             .25rem !default;
 $btn-padding-x:             .75rem !default;
+$btn-font-family:           null !default;
 $btn-font-size:             $font-size-base !default;
 $btn-font-weight:           $font-weight-normal !default;
 $btn-line-height:           1.5 !default;
@@ -663,6 +664,7 @@ $btn-default-active-border-color:   $uibase-400 !default;
 // Forms
 // =====
 // Padding and line-height should add up to buttons for inputs and selects
+$input-font-family:             null !default;
 $input-font-size:               $btn-font-size !default;
 $input-font-weight:             $font-weight-normal !default;
 $input-line-height:             $btn-line-height !default;
