--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -3,6 +3,7 @@
     // Base button
     .btn {
         display: inline-block;
+        font-family: $btn-font-family;
         font-weight: $btn-font-weight;
         text-align: center;
         text-decoration: none;
