--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -244,6 +244,7 @@
             height: $input-height-outer;
             padding: $input-padding-y calc(#{$input-padding-x} + #{$custom-select-indicator-width} + #{$custom-select-indicator-offset}) $input-padding-y $input-padding-x;
             @include font-size($input-font-size);
+            font-family: $input-font-family;
             font-weight: $input-font-weight;
             line-height: $input-line-height;
             color: $input-color;
@@ -380,6 +381,7 @@
             height: $input-height-outer;
             padding: $input-padding-y $input-padding-x;
             overflow: hidden;
+            font-family: $input-font-family;
             @include font-size($input-font-size);
             font-weight: $input-font-weight;
             line-height: $input-line-height;
@@ -398,6 +400,7 @@
                 display: block;
                 height: $input-height-outer;
                 padding: $input-padding-y $input-padding-x;
+                font-family: $btn-font-family;
                 line-height: $input-line-height;
                 color: $custom-file-button-color;
                 content: "Browse";
