--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -14,6 +14,7 @@ $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2
             // Make inputs the height of their button counterpart (line-height + padding + border)
             height: $input-height-outer;
             padding: $input-padding-y $input-padding-x;
+            font-family: $input-font-family;
             @include font-size($input-font-size);
             font-weight: $input-font-weight;
             line-height: $input-line-height;
