--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -170,7 +170,7 @@ strong {
 }
 
 small {
-    font-size: 80%; // Add the correct font size in all browsers
+    @include font-size(80%); // Add the correct font size in all browsers
 }
 
 //
@@ -180,7 +180,7 @@ small {
 sub,
 sup {
     position: relative;
-    font-size: 75%;
+    @include font-size(75%);
     line-height: 0;
     vertical-align: baseline;
 }
@@ -235,7 +235,7 @@ code,
 kbd,
 samp {
     font-family: $font-family-monospace;
-    font-size: 1em; // Correct the odd `em` font sizing in all browsers.
+    @include font-size(1em); // Correct the odd `em` font sizing in all browsers.
 }
 
 pre {
@@ -321,7 +321,7 @@ optgroup,
 textarea {
     margin: 0; // Remove the margin in Firefox and Safari
     font-family: inherit;
-    font-size: inherit;
+    @include font-size(inherit);
     line-height: inherit;
 }
 
@@ -405,7 +405,7 @@ legend {
     max-width: 100%; // 1
     padding: 0;
     margin-bottom: .5rem;
-    font-size: 1.5rem;
+    @include font-size(1.5rem);
     line-height: inherit;
     color: inherit; // 2
     white-space: normal; // 1
