Accordion example, fix border and radius if only one card

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -140,12 +140,12 @@ $custom-file-text: (
             }
         }
 
-        &:first-of-type {
+        &:first-of-type:not(:last-of-type) {
             border-bottom: 0;
             @include border-bottom-radius(0);
         }
 
-        &:last-of-type {
+        &:last-of-type:not(:first-of-type) {
             @include border-top-radius(0);
         }
 
