--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -1044,13 +1044,13 @@ h4 > code {
   border-radius: 0;
 }
 
-.accordion > .card:first-of-type {
+.accordion > .card:first-of-type:not(:last-of-type) {
   border-bottom: 0;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.accordion > .card:last-of-type {
+.accordion > .card:last-of-type:not(:first-of-type) {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
