Add aria-label to some navigation sections

--- a/docs/_includes/nav-sidebar.html
+++ b/docs/_includes/nav-sidebar.html
@@ -1,4 +1,4 @@
-<nav class="cf-links">
+<nav class="cf-links" aria-label="Section navigation">
 
 {% for group in site.data.nav %}
   {% assign group_slug = group.title | slugify %}
