--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -20,8 +20,8 @@
                 {% include nav-sidebar.html %}
             </div>
 
-            <div class="d-none d-xl-block col-xl-2 cf-toc">
-            </div>
+            <nav class="d-none d-xl-block col-xl-2 cf-toc" aria-label="Page navigation">
+            </nav>
 
             <main class="col-12 col-md-9 col-xl-8 cf-content" role="main">
                 <h1 class="cf-title" id="content">
