Add `.radius-pill` utility

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -234,6 +234,7 @@ $enable-utility-border-colors:              true !default;
 $enable-utility-border-palette:             true !default;
 $enable-utility-border-special:             true !default;
 $enable-utility-border-radius-circle:       true !default;
+$enable-utility-border-radius-pill:         true !default;
 $enable-utility-border-radius-addition:     true !default;
 $enable-utility-border-radius-component:    true !default;
 $enable-utility-border-radius-removal:      true !default;
