--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -3,26 +3,22 @@
     .badge {
         display: inline-block;
         padding: $badge-padding-y $badge-padding-x;
+        font-family: $badge-font-family;
         @include font-size($badge-font-size);
         font-weight: $badge-font-weight;
         line-height: $badge-line-height;
+        color: $badge-color;
         text-align: center;
         text-decoration: none;
         white-space: nowrap;
         vertical-align: baseline;
+        background-color: $badge-bg;
         border: $badge-border-width solid transparent;
         @include border-radius($badge-border-radius);
 
         // Empty badges collapse automatically
         &:empty {
             display: none;
-        }
-
-        // Add hover effects, but only for links
-        @at-root a#{&} {
-            @include hover-focus() {
-                text-decoration: none;
-            }
         }
 
         @if $enable-badge-close {
@@ -33,11 +29,6 @@
                 @include font-size($badge-close-font-size);
             }
         }
-
-        // Default color (linked badges get darker on :hover)
-        @if $enable-badge-default {
-            @include badge-variant($badge-default-color, $badge-default-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
-        }
     }
 
     // Quick fix for badges in buttons
@@ -45,15 +36,6 @@
         .btn .badge {
             position: relative;
             top: -1px;
-        }
-    }
-
-    // Pill
-    @if $enable-badge-pill {
-        .badge-pill {
-            padding-right: $badge-pill-padding-x;
-            padding-left: $badge-pill-padding-x;
-            @include border-radius($badge-pill-border-radius);
         }
     }
 
@@ -71,55 +53,6 @@
 
                 &:not(:last-child) {
                     @include border-end-radius(0);
-                }
-            }
-        }
-    }
-
-    // Theme generation
-    @if $enable-badge-colors {
-        @if (type-of($badge-colors) == "map" and length($badge-colors) != 0) {
-            $mixed-badge-themes: _mix-context-colors($badge-colors, $badge-levels);
-            $badge-themes: map-merge($mixed-badge-themes, $badge-themes);
-        }
-
-        // Colors (linked badges get darker on :hover)
-        @if (type-of($badge-themes) == "map" and length($badge-themes) != 0) {
-            @each $theme, $colors in $badge-themes {
-                $bg:            map-get($colors, "bg");
-                $color:         map-get($colors, "color");
-                $hover-bg:      map-get($colors, "hover-bg");
-                $hover-color:   map-get($colors, "hover-color");
-
-                .badge-#{$theme} {
-                    @include badge-variant($color, $bg, $bg, $hover-color, $hover-bg, $hover-bg);
-                }
-            }
-        }
-    }
-
-    // Outline (linked badges get color fill on :hover)
-    @if $enable-badge-outline {
-        .badge-outline {
-            @include badge-variant($badge-default-color, $badge-outline-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
-        }
-    }
-
-    @if $enable-badge-outline-colors {
-        @if (type-of($badge-outline-colors) == "map" and length($badge-outline-colors) != 0) {
-            $mixed-badge-outline-themes: _mix-context-colors($badge-outline-colors, $badge-outline-levels);
-            $badge-outline-themes: map-merge($mixed-badge-outline-themes, $badge-outline-themes);
-        }
-
-        @if (type-of($badge-outline-themes) == "map" and length($badge-outline-themes) != 0) {
-            @each $theme, $colors in $badge-outline-themes {
-                $bg:            $badge-outline-bg;
-                $color:         map-get($colors, "base");
-                $hover-bg:      map-get($colors, "bg");
-                $hover-color:   map-get($colors, "hover-color");
-
-                .badge-outline-#{$theme} {
-                    @include badge-variant($color, $bg, $hover-bg, $hover-color, $hover-bg, $hover-bg);
                 }
             }
         }
