--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -59,9 +59,8 @@ $level-context: (
 
 
 // Increase (or decrease with negative number) to alter color for the hover state of
-//`.text-{color}-(palette-level} and `.bg-{color}-(palette-level} utilities
+//`.text-{color}-(palette-level} utilities
 $level-delta-hover-color:           100 !default;
-$level-delta-hover-bg:              100 !default;
 
 
 // Colors
