--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -8,7 +8,8 @@
         @include media-breakpoint-up($breakpoint) {
             @each $prop, $abbrev in (margin: m, padding: p) {
                 @if ($abbrev == m and $enable-utility-spacing-margin) or ($abbrev == p and $enable-utility-spacing-padding) {
-                    @each $size, $length in $spacers {
+                    $spacers-map: if($abbrev == m, $spacers-margin, $spacers-padding);
+                    @each $size, $length in $spacers-map {
                         .#{$abbrev}#{$bprule}-#{$size} {
                             #{$prop}: $length !important;
                         }
@@ -36,25 +37,25 @@
             // These variants get a 'n' prepended to the size so
             // `.mb-n1` is the negative variant of `.mb-1`
             @if $enable-utility-spacing-margin-negative {
-                @each $size, $length in $spacers-negative {
+                @each $size, $length in $spacers-margin-negative {
                     @if not($length == 0) {
-                        .m#{$bprule}-#{$spacers-negative-prepend}#{$size} {
+                        .m#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
                             margin: ($length * -1) !important;
                         }
-                        .mt#{$bprule}-#{$spacers-negative-prepend}#{$size},
-                        .my#{$bprule}-#{$spacers-negative-prepend}#{$size} {
+                        .mt#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
+                        .my#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
                             margin-top: ($length * -1) !important;
                         }
-                        .me#{$bprule}-#{$spacers-negative-prepend}#{$size},
-                        .mx#{$bprule}-#{$spacers-negative-prepend}#{$size} {
+                        .me#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
+                        .mx#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
                             margin-right: ($length * -1) !important;
                         }
-                        .mb#{$bprule}-#{$spacers-negative-prepend}#{$size},
-                        .my#{$bprule}-#{$spacers-negative-prepend}#{$size} {
+                        .mb#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
+                        .my#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
                             margin-bottom: ($length * -1) !important;
                         }
-                        .ms#{$bprule}-#{$spacers-negative-prepend}#{$size},
-                        .mx#{$bprule}-#{$spacers-negative-prepend}#{$size} {
+                        .ms#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
+                        .mx#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
                             margin-left: ($length * -1) !important;
                         }
                     }
