Utilities-Sizing: Add sizing settings and viewport utils

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -278,6 +278,7 @@ $enable-utility-shadow:                     true !default;
 $enable-utility-sizing:                     true !default;
 $enable-utility-sizing-width:               true !default;
 $enable-utility-sizing-height:              true !default;
+$enable-utility-sizing-viewport:            true !default;
 
 $enable-utility-spacing:                    true !default;
 $enable-utility-spacing-padding:            true !default;
