--- a/scss/utilities/_sizing.scss
+++ b/scss/utilities/_sizing.scss
@@ -1,17 +1,30 @@
 // stylelint-disable declaration-no-important
 
 @if $enable-utility-sizing {
-    // Width
-    @if $enable-utility-sizing-width {
-        .w-auto { width: auto !important; }
-        .w-100 { width: 100% !important; }
-        .mw-100 { max-width: 100% !important; }
+    // Width and height
+    @each $prop, $abbrev in (width: w, height: h) {
+        @if ($abbrev == w and $enable-utility-sizing-width) or ($abbrev == h and $enable-utility-sizing-height) {
+            $sizes-map: if($abbrev == w, $sizes-width, $sizes-height);
+            @each $size, $length in $sizes-map {
+                .#{$abbrev}-#{$size} { #{$prop}: $length !important; }
+            }
+        }
     }
 
-    // Height
+    // Max width/height
+    @if $enable-utility-sizing-width {
+        .mw-100 { max-width: 100% !important; }
+    }
     @if $enable-utility-sizing-height {
-        .h-auto { height: auto !important; }
-        .h-100 { height: 100% !important; }
         .mh-100 { max-height: 100% !important; }
+    }
+
+    // Viewport
+    @if $enable-utility-sizing-viewport {
+        .min-vw-100 { min-width: 100vw !important; }
+        .min-vh-100 { min-height: 100vh !important; }
+
+        .vw-100 { width: 100vw !important; }
+        .vh-100 { height: 100vh !important; }
     }
 }
