use font-size mixin

--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -233,7 +233,7 @@
     padding: 5px;
     // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
     font-family: "Font Awesome 5 Free";
-    font-size: 60px;
+    @include font-size(60px);
     font-weight: 900;
     line-height: 1;
     color: #fff;
