--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -302,6 +302,7 @@ $enable-utility-text-colors:                true !default;
 $enable-utility-text-palette:               true !default;
 $enable-utility-text-special:               true !default;
 $enable-utility-text-reset:                 true !default;
+$enable-utility-text-size:                  true !default;
 
 $enable-utility-valign:                     true !default;
 
